# cmd/swag/docs/swagger.json
@@ -859,6 +859,49 @@
                 }
             }
         },
+        "/roleaccount/get_role_account_by_account_id/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "API này trả về role account theo Account_Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RoleAccount"
+                ],
+                "summary": "Lấy role account theo Account_Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID account",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/roleaccount/get_role_account_by_role_id/{id}": {
             "get": {
                 "security": [
@@ -1151,11 +1194,11 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "admin@gmail.com"
+                    "example": "phananhtu1998@gmail.com"
                 },
                 "password": {
                     "type": "string",
-                    "example": "helo@1234"
+                    "example": "123"
                 }
             }
         },
